js/error.txt
c:\Users\Usuario\Downloads\new\estudiantes\Saber11_Pro\js\app.js:4019
const NativeExamModule = {
      ^

SyntaxError: Identifier 'NativeExamModule' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.11.1
